--- a/www/index.html
+++ b/www/index.html
@@ -1,128 +1,51 @@
 <!doctype html>
 <html>
 <head>
+    <meta charset='utf-8'>
 	<title>Pool Statistics</title>
+	<meta name='viewport' content='width=device-width, initial-scale=1'>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+	<style type="text/css">
+		.chartContainer {
+			width: 100%;
+			min-height: 500px;
+			margin-bottom: 1rem;
+		}
+	</style>
 </head>
 <body>
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-12">
+				<h1>Pool Statistics</h1>
+				<p><strong>Note:</strong> Data may have gaps.</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-lg-6">
+				<h2>Past Two Days</h2>
+				<div class="chartContainer"><canvas id="pastTwoDays"></canvas></div>
+			</div>
+			<div class="col-lg-6">
+				<h2>Past Week</h2>
+				<div class="chartContainer"><canvas id="pastWeek"></canvas></div>		
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-lg-12">
+				<h2>Past Month</h2>
+				<div class="chartContainer"><canvas id="pastMonth"></canvas></div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-lg-12">
+				<h2>All Time</h2>
+				<div class="chartContainer"><canvas id="allTimeDaily"></canvas></div>
+			</div>
+		</div>
+	</div>
+
 	<script src="https://cdn.jsdelivr.net/npm/chart.js@3.8.0/dist/chart.min.js"></script>
-
-	<h1 style="font-family: sans-serif">Pool Statistics</h1>
-	<div id="chartContainer" style="width:1000px; height:600px"><canvas id="chart"></canvas></div>
-
-	<script>
-		async function getChartData() {
-			let response = await fetch("data.json");
-			if (!response.ok) {
-				throw ("Error when fetching data.");
-			}
-			return response.json();
-		}
-
-		async function buildChart() {
-			const dataSource = await getChartData();
-			const ctx = document.getElementById('chart').getContext('2d');
-
-			const chartData = {
-				labels: dataSource.pastTwoDays.labels,
-				datasets: [{
-					label: 'Water In',
-					data: dataSource.pastTwoDays.waterInTemp,
-					backgroundColor: [
-						'rgba(0, 112, 192, 0.2)'
-					],
-					borderColor: [
-						'rgba(0, 112, 192, 1)'
-					],
-					borderWidth: 2,
-					pointRadius: 0,
-					hidden: false
-				},
-				{
-					label: 'Water Out',
-					data: dataSource.pastTwoDays.waterOutTemp,
-					backgroundColor: [
-						'rgba(255, 64, 64, 0.2)'
-					],
-					borderColor: [
-						'rgba(255, 64, 64, 1)'
-					],
-					borderWidth: 2,
-					pointRadius: 0,
-					hidden: true
-				},
-				{
-					label: 'Compressor Current',
-					data: dataSource.pastTwoDays.compressorCurrent,
-					backgroundColor: [
-						'rgba(102, 102, 102, 0.2)'
-					],
-					borderColor: [
-						'rgba(102, 102, 102, 1)'
-					],
-					borderWidth: 2,
-					pointRadius: 0,
-					hidden: false,
-					yAxisID: 'y2'
-				},
-				{
-					label: 'Exhaust Temp',
-					data: dataSource.pastTwoDays.exhaustTemp,
-					backgroundColor: [
-						'rgba(237, 125, 49, 0.2)'
-					],
-					borderColor: [
-						'rgba(237, 125, 49, 1)'
-					],
-					borderWidth: 2,
-					pointRadius: 0,
-					hidden: true
-				},
-				{
-					label: 'Ambient Temp',
-					data: dataSource.pastTwoDays.ambientTemp,
-					backgroundColor: [
-						'rgba(84, 130, 53, 0.2)'
-					],
-					borderColor: [
-						'rgba(84, 130, 53, 1)'
-					],
-					borderWidth: 2,
-					pointRadius: 0,
-					hidden: true
-				}
-				]
-			};
-
-			const chart = new Chart(ctx, {
-				type: 'line',
-				data: chartData,
-				options: {
-					scales: {
-						y: {
-							ticks: {
-								stepSize: 0.1
-							},
-							stack: 'stack1',
-							stackWeight: 2,
-							stacked: false
-						},
-						y2: {
-							stack: 'stack1',
-							stackWeight: 1,
-							stacked: true
-						}
-
-					},
-					interaction: {
-						mode: 'index',
-						intersect: false
-					}
-				}
-			});
-		}
-
-		buildChart();
-	</script>
-
+	<script src="script.js"></script>
 </body>
 </html>
